--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                             <img class="card-img-top" src="assets/images/president.jpg" alt="Brian Bazurto - President" />
                             <div class="card-body text-center p-4 p-lg-5">
                                 <h5 class="fw-bold">Brian Bazurto</h5>
-                                <p class="mb-0">President</p>
+                                <p class="mb-0">President & Co-Founder</p>
                                 <p class="mt-3">Rising Junior @Florida International University majoring in Computer Science with a minor in Actuarial Studies. Brian dedicates his time to animal shelters and enjoys Miami's diverse cuisine. His passion for tech and community service drives his work and leisure.</p>
                             </div>
                         </div>
@@ -76,7 +76,8 @@
                             <img class="card-img-top" src="assets/images/vice-president.jpg" alt="Amilcar Pena - Vice President" />
                             <div class="card-body text-center p-4 p-lg-5">
                                 <h5 class="fw-bold">Amilcar Pena</h5>
-                                <p class="mb-0">Vice President</p>
+                                <p class="mb-0">Vice President & Co-Founder</p>
+                                <p class="mt-3">Rising Junior @Florida International University majoring in Computer Science</p>
                             </div>
                         </div>
                     </div>
@@ -86,6 +87,7 @@
                             <div class="card-body text-center p-4 p-lg-5">
                                 <h5 class="fw-bold">Yana Judah</h5>
                                 <p class="mb-0">Treasurer</p>
+                                <p class="mt-3">Rising Junior @Florida International University majoring in Computer Science</p>
                             </div>
                         </div>
                     </div>
@@ -95,6 +97,7 @@
                             <div class="card-body text-center p-4 p-lg-5">
                                 <h5 class="fw-bold">Jennifer Parra</h5>
                                 <p class="mb-0">RSOC Representative</p>
+                                <p class="mt-3">Jennifer Parra RSO Representative Jennifer is a First Generation Computer Science student at Florida International University, with a minor in Criminal Justice. Passionate about being a well-rounded organizer, she has developed strong communication skills through her current role as an audience services representative. In her free time, Jennifer enjoys doing road trips across the country and painting.</p>
                             </div>
                         </div>
                     </div>
