--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                 <div class="row gx-lg-5">
                     <div class="col-lg-12">
                         <h2 class="fw-bold">Club Description</h2>
-                        <p>Code Crunch @ FIU is dedicated to providing a collaborative environment for students interested in coding and technology. Our mission is to enhance coding skills, foster innovation, and build a strong tech community at FIU. Whether you're a beginner or an experienced coder, our club offers a space to learn, grow, and connect with like-minded peers through workshops, coding challenges, and networking events.</p>
+                        <p>Founded in August 2024, Code Crunch @ FIU is a student-led club at Florida International University (FIU) dedicated to providing a collaborative environment for students interested in coding and technology. Our mission is to enhance coding skills, foster innovation, and build a strong tech community at FIU. Whether you're a beginner or an experienced coder, our club offers a space to learn, grow, and connect with like-minded peers through workshops, coding challenges, and networking events.</p>
                     </div>
                 </div>
 
