--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="container px-lg-5">
                 <div class="p-4 p-lg-5 rounded-3 text-center">
                     <h1 class="display-5 fw-bold">Welcome to Code Crunch @ FIU</h1>
-                    <p class="fs-4">Your go-to place for coding, collaboration, and community at FIU.</p>
+                    <p class="fs-4">Your go-to place for coding, collaboration, and community at Florida International University (FIU).</p>
                 </div>
             </div>
         </header>
