--- a/about.html
+++ b/about.html
@@ -68,6 +68,9 @@
                                 <h5 class="fw-bold">Brian Bazurto</h5>
                                 <p class="mb-0">President & Co-Founder</p>
                                 <p class="mt-3">Rising Junior @Florida International University majoring in Computer Science with a minor in Actuarial Studies. Brian dedicates his time to animal shelters and enjoys Miami's diverse cuisine. His passion for tech and community service drives his work and leisure.</p>
+                                <a href="https://www.linkedin.com/in/IBA001" target="_blank" class="linkedin-icon">
+                                    <i class="bi bi-linkedin"></i> LinkedIn
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -78,6 +81,9 @@
                                 <h5 class="fw-bold">Amilcar Pena</h5>
                                 <p class="mb-0">Vice President & Co-Founder</p>
                                 <p class="mt-3">Rising Junior @Florida International University majoring in Computer Science</p>
+                                <a href="https://www.linkedin.com/in/amilcarjpena/" target="_blank" class="linkedin-icon">
+                                    <i class="bi bi-linkedin"></i> LinkedIn
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -88,6 +94,9 @@
                                 <h5 class="fw-bold">Yana Judah</h5>
                                 <p class="mb-0">Treasurer</p>
                                 <p class="mt-3">Rising Junior @Florida International University majoring in Computer Science</p>
+                                <a href="https://www.linkedin.com/in/yana-j/" target="_blank" class="linkedin-icon">
+                                    <i class="bi bi-linkedin"></i> LinkedIn
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -98,6 +107,9 @@
                                 <h5 class="fw-bold">Jennifer Parra</h5>
                                 <p class="mb-0">RSOC Representative</p>
                                 <p class="mt-3">Jennifer Parra RSO Representative Jennifer is a First Generation Computer Science student at Florida International University, with a minor in Criminal Justice. Passionate about being a well-rounded organizer, she has developed strong communication skills through her current role as an audience services representative. In her free time, Jennifer enjoys doing road trips across the country and painting.</p>
+                                <a href="https://www.linkedin.com/in/jennifer-d-parra/" target="_blank" class="linkedin-icon">
+                                    <i class="bi bi-linkedin"></i> LinkedIn
+                                </a>
                             </div>
                         </div>
                     </div>
