--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
                             <img class="card-img-top" src="assets/images/treasurer.jpg" alt="Yana Judah - Treasurer" />
                             <div class="card-body text-center p-4 p-lg-5">
                                 <h5 class="fw-bold">Yana Judah</h5>
-                                <p class="mb-0">Treasurer</p>
+                                <p class="mb-0">Treasurer  & Co-Founder</p>
                                 <p class="mt-3">Rising Junior @Florida International University majoring in Computer Science</p>
                                 <a href="https://www.linkedin.com/in/yana-j/" target="_blank" class="linkedin-icon">
                                     <i class="bi bi-linkedin"></i> LinkedIn
@@ -106,7 +106,7 @@
                             <div class="card-body text-center p-4 p-lg-5">
                                 <h5 class="fw-bold">Jennifer Parra</h5>
                                 <p class="mb-0">RSOC Representative</p>
-                                <p class="mt-3">Jennifer Parra RSO Representative Jennifer is a First Generation Computer Science student at Florida International University, with a minor in Criminal Justice. Passionate about being a well-rounded organizer, she has developed strong communication skills through her current role as an audience services representative. In her free time, Jennifer enjoys doing road trips across the country and painting.</p>
+                                <p class="mt-3">First Generation Computer Science student at Florida International University, with a minor in Criminal Justice. Passionate about being a well-rounded organizer, she has developed strong communication skills through her current role as an audience services representative. In her free time, Jennifer enjoys doing road trips across the country and painting.</p>
                                 <a href="https://www.linkedin.com/in/jennifer-d-parra/" target="_blank" class="linkedin-icon">
                                     <i class="bi bi-linkedin"></i> LinkedIn
                                 </a>
