--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Code Crunch @ FIU - Home" />
-        <meta name="author" content="Code Crunch @ FIU" />
+        <meta name="description" content="Code Crunch - Home" />
+        <meta name="author" content="Code Crunch" />
         <title>Home - Code Crunch @ FIU</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -60,8 +60,8 @@
         <header class="py-5 bg-light">
             <div class="container px-lg-5">
                 <div class="p-4 p-lg-5 rounded-3 text-center">
-                    <h1 class="display-5 fw-bold">Welcome to Code Crunch @ FIU</h1>
-                    <p class="fs-4">Your go-to place for coding, collaboration, and community at Florida International University (FIU).</p>
+                    <h1 class="display-5 fw-bold">Welcome to Code Crunch</h1>
+                    <p class="fs-4">Your go-to place for coding, collaboration, and community, empowering Florida international University (FIU) students to connect, learn, and innovate together.</p>
                 </div>
             </div>
         </header>
