--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Code Crunch @ FIU - About Us" />
-        <meta name="author" content="Code Crunch @ FIU" />
-        <title>About Us - Code Crunch @ FIU</title>
+        <meta name="description" content="Code Crunch - About Us" />
+        <meta name="author" content="Code Crunch" />
+        <title>About Us - Code Crunch</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
