--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Code Crunch - Home" />
         <meta name="author" content="Code Crunch" />
-        <title>Home - Code Crunch @ FIU</title>
+        <title>Home - Code Crunch</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -38,7 +38,7 @@
             <div class="container px-lg-5">
                 <a class="navbar-brand" href="index.html">
                     <img src="assets/images/logo.png" alt="Code Crunch @ FIU Logo" />
-                    Code Crunch @ FIU
+                    Code Crunch
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
