--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-lg-5">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/images/logo.png" alt="Code Crunch @ FIU Logo" />
+                    <img src="assets/images/logo.png" alt="Code Crunch  Logo" />
                     Code Crunch
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -53,7 +53,7 @@
 
         <!-- Logo section below the navbar -->
         <div class="logo-container">
-            <img src="assets/images/logo.png" alt="Code Crunch @ FIU Logo" />
+            <img src="assets/images/logo.png" alt="Code Crunch  Logo" />
         </div>
 
         <!-- Header-->
@@ -134,7 +134,7 @@
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Interest Form</h2>
-                                <p class="mb-0">Fill out our interest form to let us know how you'd like to get involved with Code Crunch @ FIU.</p>
+                                <p class="mb-0">Fill out our interest form to let us know how you'd like to get involved with Code Crunch .</p>
                                 <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/bxas9Btdta" target="_blank">Fill Out Form</a>
                             </div>
                         </div>
