--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-lg-5">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/images/logo.png" alt="Code Crunch @ FIU Logo" />
-                    Code Crunch @ FIU
+                    <img src="assets/images/logo.png" alt="Code Crunch  Logo" />
+                    Code Crunch 
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -46,7 +46,7 @@
         <header class="py-5 bg-light">
             <div class="container px-lg-5">
                 <div class="p-4 p-lg-5 rounded-3 text-center">
-                    <h1 class="display-5 fw-bold">Contact Code Crunch @ FIU</h1>
+                    <h1 class="display-5 fw-bold">Contact Code Crunch </h1>
                     <p class="fs-4">Have any questions or need more information? Reach out to us using the form below!</p>
                 </div>
             </div>
