--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
             <div class="container px-lg-5">
                 <div class="p-4 p-lg-5 rounded-3 text-center">
                     <h1 class="display-5 fw-bold">About Code Crunch </h1>
-                    <p class="fs-4">Your go-to place for coding, collaboration, and community at FIU.</p>
+                    <p class="fs-4">Your go-to place for FIU students to connect through coding, collaboration, and community</p>
                 </div>
             </div>
         </header>
