--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Notion Workspace</h2>
                                 <p class="mb-0">Access our Notion workspace for meeting notes, project resources, and more.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://www.notion.so/invite/09b6442ade507ffe8d04b" target="_blank">Visit Notion</a>
+                                <p class="mt-3">Stay tuned for updates and highlights. Our Notion workspace is currently under construction.</p>>
+                                <!--     <a class="btn btn-primary btn-lg mt-3" href="https://www.notion.so/invite/09b6442ade507ffe8d04b" target="_blank">Notion workspace</a>                          -->
                             </div>
                         </div>
                     </div>
@@ -115,7 +116,7 @@
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Google Docs Folder</h2>
                                 <p class="mb-0">View our shared Google Drive folder for club documents and resources.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://drive.google.com/drive/folders/1zbtcwetz_gnYZA8TZDBbw7tu5FY3337A?usp=sharing" target="_blank">Open Google Drive</a>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://drive.google.com/drive/folders/1TszlvVIOM9glMcMINbFpELWidgagtSD1?usp=sharing" target="_blank">Open Google Drive</a>
                             </div>
                         </div>
                     </div>
