--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             .logo-container img {
                 height: 200px; /* Twice the original size */
             }
-       
+
             .navbar-brand img {
                 height: 50px; /* Size of the logo next to the navbar */
                 margin-right: 10px;
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-lg-5">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/images/logo.png" alt="Code Crunch  Logo" />
+                    <img src="assets/images/logo.png" alt="Code Crunch Logo" />
                     Code Crunch
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -53,7 +53,7 @@
 
         <!-- Logo section below the navbar -->
         <div class="logo-container">
-            <img src="assets/images/logo.png" alt="Code Crunch  Logo" />
+            <img src="assets/images/logo.png" alt="Code Crunch Logo" />
         </div>
 
         <!-- Header-->
@@ -61,7 +61,7 @@
             <div class="container px-lg-5">
                 <div class="p-4 p-lg-5 rounded-3 text-center">
                     <h1 class="display-5 fw-bold">Welcome to Code Crunch</h1>
-                    <p class="fs-4">Your go-to place for coding, collaboration, and community, empowering Florida international University (FIU) students to connect, learn, and innovate together.</p>
+                    <p class="fs-4">Your go-to place for coding, collaboration, and community, empowering Florida International University (FIU) students to connect, learn, and innovate together.</p>
                 </div>
             </div>
         </header>
@@ -90,14 +90,23 @@
                             </div>
                         </div>
                     </div>
+                    <!-- LinkedIn Card -->
+                    <div class="col-lg-6 col-xxl-4 mb-5">
+                        <div class="card bg-light border-0 h-100">
+                            <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
+                                <h2 class="fs-4 fw-bold">Follow Us on LinkedIn</h2>
+                                <p class="mb-0">Connect with us professionally on LinkedIn for club updates, networking opportunities, and more!</p>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://www.linkedin.com/company/code-crunch-club/" target="_blank">Visit LinkedIn</a>
+                            </div>
+                        </div>
+                    </div>
                     <!-- Notion Workspace Card -->
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Notion Workspace</h2>
                                 <p class="mb-0">Access our Notion workspace for meeting notes, project resources, and more.</p>
-                                <p class="mt-3">Stay tuned for updates and highlights. Our Notion workspace is currently under construction.</p>>
-                                <!--     <a class="btn btn-primary btn-lg mt-3" href="https://www.notion.so/invite/09b6442ade507ffe8d04b" target="_blank">Notion workspace</a>                          -->
+                                <p class="mt-3">Stay tuned for updates and highlights. Our Notion workspace is currently under construction.</p>
                             </div>
                         </div>
                     </div>
@@ -135,7 +144,7 @@
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Interest Form</h2>
-                                <p class="mb-0">Fill out our interest form to let us know how you'd like to get involved with Code Crunch .</p>
+                                <p class="mb-0">Fill out our interest form to let us know how you'd like to get involved with Code Crunch.</p>
                                 <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/bxas9Btdta" target="_blank">Fill Out Form</a>
                             </div>
                         </div>
