--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                             <img class="card-img-top" src="assets/images/president.jpg" alt="Brian Bazurto - President" />
                             <div class="card-body text-center p-4 p-lg-5">
                                 <h5 class="fw-bold">Brian Bazurto</h5>
-                                <p class="mb-0">President & Co-Founder</p>
+                                <p class="mb-0">President & Founder</p>
                                 <p class="mt-3">Rising Junior @Florida International University majoring in Computer Science with a minor in Actuarial Studies. Brian dedicates his time to animal shelters and enjoys Miami's diverse cuisine. His passion for tech and community service drives his work and leisure.</p>
                                 <a href="https://www.linkedin.com/in/IBA001" target="_blank" class="linkedin-icon">
                                     <i class="bi bi-linkedin"></i> LinkedIn
