--- a/index.html
+++ b/index.html
@@ -114,11 +114,13 @@
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <h2 class="fs-4 fw-bold">Instagram</h2>
-                                <p class="mt-3">Stay tuned for updates and highlights. Our Instagram is currently under construction.</p>
+                                <h2 class="fs-4 fw-bold">Follow Us on Instagram</h2>
+                                <p class="mb-0">Stay updated on our latest events, highlights, and club activities by following us on Instagram.</p>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://www.instagram.com/codecrunchclub/" target="_blank">Visit Instagram</a>
                             </div>
                         </div>
                     </div>
+
                     <!-- Google Docs Folder Card -->
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
