--- a/index.html
+++ b/index.html
@@ -127,10 +127,12 @@
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Google Docs Folder</h2>
                                 <p class="mb-0">View our shared Google Drive folder for club documents and resources.</p>
+                                <p class="mt-3"><strong>Note:</strong> Access to the Google Drive folder may require permission. If you cannot view the documents, please request access through Google or contact one of the club admins to grant you the necessary permissions.</p>
                                 <a class="btn btn-primary btn-lg mt-3" href="https://drive.google.com/drive/folders/1TszlvVIOM9glMcMINbFpELWidgagtSD1?usp=sharing" target="_blank">Open Google Drive</a>
                             </div>
                         </div>
                     </div>
+
                     <!-- Attendance Form Card -->
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
