--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Become a Member</h2>
                                 <p class="mb-0">Join our club to gain access to exclusive events, resources, and a community of like-minded peers.</p>
+                                <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to complete the membership sign-up.</p>
                                 <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/JEbApqq0U9" target="_blank">Sign Up</a>
                             </div>
                         </div>
@@ -139,20 +140,23 @@
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Attendance Form</h2>
                                 <p class="mb-0">Mark your attendance for meetings and events through our online form.</p>
+                                <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to submit attendance.</p>
                                 <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/xx2aRuEHDF" target="_blank">Mark Attendance</a>
                             </div>
                         </div>
                     </div>
-                    <!-- Interest Form Card -->
+                    <!-- Meeting RSVP Card (formerly Interest Form) -->
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <h2 class="fs-4 fw-bold">Interest Form</h2>
-                                <p class="mb-0">Fill out our interest form to let us know how you'd like to get involved with Code Crunch.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/bxas9Btdta" target="_blank">Fill Out Form</a>
+                                <h2 class="fs-4 fw-bold">Meeting RSVP</h2>
+                                <p class="mb-0">Let us know you're attending our upcoming meeting by filling out the RSVP form.</p>
+                                <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to complete the RSVP.</p>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/bxas9Btdta" target="_blank">RSVP Now</a>
                             </div>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </section>
