--- a/upcoming-events.html
+++ b/upcoming-events.html
@@ -1,146 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Code Crunch - Upcoming Events" />
-        <meta name="author" content="Code Crunch" />
-        <title>Upcoming Events - Code Crunch</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-        <!-- Custom CSS for logo positioning next to the navbar-->
-        <style>
-            .navbar-brand img {
-                height: 50px;
-                margin-right: 10px;
-            }
-            .logo-container {
-                text-align: center;
-                background-color: #5072a7;
-                padding: 40px 0;
-            }
-            .logo-container img {
-                height: 200px;
-            }
-            .event-container {
-                margin-bottom: 30px;
-            }
-            .event-container img {
-                width: 50%;
-                height: auto;
-                margin-bottom: 15px;
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-            }
-            .event-description {
-                text-align: left;
-            }
-            .social-links-inline {
-                display: inline-block;
-                font-size: 1.5rem;
-                vertical-align: middle;
-            }
-            .social-links-inline a {
-                margin: 0 10px;
-                color: #000;
-            }
-            .divider {
-                width: 33.33%; /* Line covers 1/3 of the section width */
-                border-top: 2px solid #000;
-                margin: 10px auto;
-            }
-        </style>
-    </head>
-    <body>
-        <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container px-lg-5">
-                <a class="navbar-brand" href="index.html">
-                    <img src="assets/images/logo.png" alt="Code Crunch Logo" />
-                    Code Crunch
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="upcoming-events.html">Events</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="Code Crunch - Upcoming Events" />
+    <meta name="author" content="Code Crunch" />
+    <title>Upcoming Events - Code Crunch</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+    <!-- Custom CSS for logo positioning next to the navbar-->
+    <style>
+        .navbar-brand img {
+            height: 50px;
+            margin-right: 10px;
+        }
+        .logo-container {
+            text-align: center;
+            background-color: #5072a7;
+            padding: 40px 0;
+        }
+        .logo-container img {
+            height: 200px;
+        }
+        .event-container {
+            margin-bottom: 30px;
+        }
+        .event-container img {
+            width: 50%;
+            height: auto;
+            margin-bottom: 15px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .event-description {
+            text-align: left;
+        }
+        .social-links-inline {
+            display: inline-block;
+            font-size: 1.5rem;
+            vertical-align: middle;
+        }
+        .social-links-inline a {
+            margin: 0 10px;
+            color: #000;
+        }
+        .divider {
+            width: 33.33%; /* Line covers 1/3 of the section width */
+            border-top: 2px solid #000;
+            margin: 10px auto;
+        }
+        .map-container {
+            width: 80%; /* 1/2 screen width */
+            height: 300px; /* Doubled height for a wider map */
+            margin: 20px auto;
+            border: 1px solid #ddd;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        }
+        .map-container iframe {
+            width: 100%;
+            height: 100%;
+        }
+        hr {
+            border: 1px solid #ccc;
+            margin: 40px 0;
+        }
+
+    </style>
+</head>
+<body>
+    <!-- Responsive navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container px-lg-5">
+            <a class="navbar-brand" href="index.html">
+                <img src="assets/images/logo.png" alt="Code Crunch Logo" />
+                Code Crunch
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="upcoming-events.html">Events</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
 
-        <!-- Header-->
-        <header class="py-5 bg-light">
-            <div class="container px-lg-5">
-                <div class="p-4 p-lg-5 rounded-3 text-center">
-                    <h1 class="display-5 fw-bold">Upcoming Events</h1>
-                    <div class="divider"></div> <!-- Divider after 1/3 of the section -->
-                    <div class="social-links-inline">
-                        <a href="https://www.linkedin.com/company/code-crunch-club/" target="_blank">
-                            <i class="bi bi-linkedin"></i> LinkedIn
-                        </a>
-                        <a href="https://www.instagram.com/codecrunchclub/" target="_blank">
-                            <i class="bi bi-instagram"></i> Instagram
-                        </a>
-                    </div>
-                    <p class="fs-4 mt-4">Stay tuned for exciting events hosted by Code Crunch!</p>
+    <!-- Header-->
+    <header class="py-5 bg-light">
+        <div class="container px-lg-5">
+            <div class="p-4 p-lg-5 rounded-3 text-center">
+                <h1 class="display-5 fw-bold">Upcoming Events</h1>
+                <div class="divider"></div> <!-- Divider after 1/3 of the section -->
+                <div class="social-links-inline">
+                    <a href="https://www.linkedin.com/company/code-crunch-club/" target="_blank">
+                        <i class="bi bi-linkedin"></i> LinkedIn
+                    </a>
+                    <a href="https://www.instagram.com/codecrunchclub/" target="_blank">
+                        <i class="bi bi-instagram"></i> Instagram
+                    </a>
                 </div>
+                <p class="fs-4 mt-4">Stay tuned for exciting events hosted by Code Crunch!</p>
             </div>
-        </header>
+        </div>
+    </header>
 
-        <!-- Upcoming Events Section-->
-        <section class="pt-4">
-            <div class="container px-lg-5">
-                <!-- Event 1 -->
-                <div class="event-container">
-                    <h2 class="fw-bold">📅 Wednesday, September 11, 2024 - General Body Meeting</h2>
-                    <img src="https://github.com/ba-00001/imagesforWEB-1/blob/main/CodeCrunch-GBM-Flyer.png?raw=true" alt="General Body Meeting Flyer" />
-                    <p class="event-description">
-                        🕔 Time: 5:00 - 6:00 PM<br>
-                        📍 Location: Tamiami Hall Room 107 (FIU Campus) or via Zoom<br>
-                    </p>
-                    <p>Join us for our upcoming General Body Meeting! For more details and to RSVP, visit our event page on LinkedIn: <a href="https://www.linkedin.com/events/generalbodymeeting-gbm7239363966789963776/" target="_blank">General Body Meeting (GBM) on LinkedIn</a>.</p>
-                </div>
-
-                <!-- Event 2 -->
-                <div class="event-container">
-                    <h2 class="fw-bold">📅 Date TBD - Panel Session: Software Engineers from Google, Salesforce, Goldman Sachs, ServiceNow, Workday</h2>
-                    <img src="https://github.com/ba-00001/imagesforWEB-1/blob/main/ComingSoon.jpg?raw=true" alt="Panel Event" />
-                    <p class="event-description">
-                        🕔 Time: TBD<br>
-                        📍 Location: Zoom<br>
-                        Don't miss our virtual panel featuring software engineers from leading companies like Google, Goldman Sachs, Workday, and more. Get tips on technical interviews, HackRank, and learn about career paths in front-end, back-end, machine learning, and FinTech.
-                    </p>
-                </div>
-
-                <!-- Weekly Club Meetings Section -->
-                <div class="event-container">
-                    <h2 class="fw-bold">📅 Weekly Club Meetings</h2>
-                    <img src="https://github.com/ba-00001/imagesforWEB-1/blob/main/logo.png?raw=true" alt="Club Meeting" />
-                    <p class="event-description">
-                        🕔 Time: Wednesdays 5:00 - 6:00 PM and Thursdays 11:00 AM - 12:00 PM<br>
-                        📍 Location: Tamiami Hall Room 107 (FIU Campus) or via Zoom<br>
-                    </p>
-                    <p>Join us for our weekly club meetings where we discuss new coding projects, upcoming events, and host interactive sessions to improve your coding skills!</p>
-                </div>
+    <!-- Upcoming Events Section-->
+    <section class="pt-4">
+        <div class="container px-lg-5">
+            <!-- Event 1 -->
+            <div class="event-container">
+                <h2 class="fw-bold">📅 Wednesday, September 11, 2024 - General Body Meeting</h2>
+                <img src="https://github.com/ba-00001/imagesforWEB-1/blob/main/CodeCrunch-GBM-Flyer.png?raw=true" alt="General Body Meeting Flyer" />
+                <p class="event-description">
+                    🕔 Time: 5:00 - 6:00 PM<br>
+                    📍 Location: <a href="https://www.google.com/maps/place/Tamiami+Hall/@25.751847,-80.3777072,16.22z/data=!4m6!3m5!1s0x88d9bf2398be2b61:0x46987dbd1a6e11cd!8m2!3d25.7528213!4d-80.3758264!16s%2Fg%2F11t5_m7wwm?entry=ttu&g_ep=EgoyMDI0MDkwOC4wIKXMDSoASAFQAw%3D%3D" target="_blank">Tamiami Hall Room 107 (FIU Campus)</a> or via Zoom<br>
+                </p>
+                <p>Join us for our upcoming General Body Meeting! For more details and to RSVP, visit our event page on LinkedIn: <a href="https://www.linkedin.com/events/generalbodymeeting-gbm7239363966789963776/" target="_blank">General Body Meeting (GBM) on LinkedIn</a>.</p>
             </div>
-        </section>
 
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container">
-                <p class="m-0 text-center text-white">Copyright &copy; Code Crunch</p>
+            <!-- Embedded Map for GBM -->
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3577.580537138036!2d-80.3777072!3d25.7528213!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9bf2398be2b61%3A0x46987dbd1a6e11cd!2sTamiami%20Hall!5e0!3m2!1sen!2sus!4v1693181870989!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-        </footer>
 
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    </body>
+            <!-- Line after Event 1 -->
+            <hr />
+            <!-- Event 2 -->
+            <div class="event-container">
+                <h2 class="fw-bold">📅 Date TBD - Panel Session: Software Engineers from Google, Salesforce, Goldman Sachs, ServiceNow, Workday</h2>
+                <img src="https://github.com/ba-00001/imagesforWEB-1/blob/main/ComingSoon.jpg?raw=true" alt="Panel Event" />
+                <p class="event-description">
+                    🕔 Time: TBD<br>
+                    📍 Location: Zoom<br>
+                    Don't miss our virtual panel featuring software engineers from leading companies like Google, Goldman Sachs, Workday, and more. Get tips on technical interviews, HackRank, and learn about career paths in front-end, back-end, machine learning, and FinTech.
+                </p>
+            </div>
+
+            <!-- Line after Event 1 -->
+            <hr />
+            
+            <!-- Weekly Club Meetings Section -->
+            <div class="event-container">
+                <h2 class="fw-bold">📅 Weekly Club Meetings</h2>
+                <img src="https://github.com/ba-00001/imagesforWEB-1/blob/main/logo.png?raw=true" alt="Club Meeting" />
+                <p class="event-description">
+                    🕔 Time: Wednesdays 5:00 - 6:00 PM and Thursdays 11:00 AM - 12:00 PM<br>
+                    📍 Location: <a href="https://www.google.com/maps/place/Tamiami+Hall/@25.751847,-80.3777072,16.22z/data=!4m6!3m5!1s0x88d9bf2398be2b61:0x46987dbd1a6e11cd!8m2!3d25.7528213!4d-80.3758264!16s%2Fg%2F11t5_m7wwm?entry=ttu&g_ep=EgoyMDI0MDkwOC4wIKXMDSoASAFQAw%3D%3D" target="_blank">Tamiami Hall Room 107 (FIU Campus)</a>
+                </p>
+            </div>
+
+            <!-- Embedded Map for Weekly Club Meetings -->
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3577.580537138036!2d-80.3777072!3d25.7528213!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9bf2398be2b61%3A0x46987dbd1a6e11cd!2sTamiami%20Hall!5e0!3m2!1sen!2sus!4v1693181870989!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- Footer-->
+    <footer class="py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; Code Crunch</p>
+        </div>
+    </footer>
+
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
