--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Join Our Discord</h2>
                                 <p class="mb-0">Connect with fellow members, share ideas, and stay updated on club activities.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://discord.gg/fBwr5w5V" target="_blank">Join Discord</a>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://discord.gg/rJAC4hfr" target="_blank">Join Discord</a>
                             </div>
                         </div>
                     </div>
