--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
             .contact-button {
                 margin-bottom: 20px; /* Adds space below the button */
             }
+
+            .group-photo img {
+            max-width: 100%; /* Makes sure the image is responsive */
+            height: auto;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Adds a subtle shadow for depth */
+            border-radius: 8px; /* Rounds the corners slightly */
+}
         </style>
     </head>
     <body>
@@ -66,6 +73,15 @@
                 </div>
             </div>
         </header>
+
+        <!-- Group Photo Section -->
+        <section class="group-photo py-5">
+            <div class="container px-lg-5 text-center">
+                <h2 class="fw-bold mb-4">Meet Our Club</h2>
+                <img src="https://github.com/ba-00001/imagesforWEB-1/blob/main/GROUPclubpic.png?raw=true" alt="Code Crunch Club Group Photo" class="img-fluid rounded" />
+            </div>
+        </section>
+
 
         <!-- Page Content-->
         <section class="pt-4">
