--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="upcoming-events.html">Events</a></li>
+                        <li class="nav-item"><a class="nav-link" href="onboarding-guide.html">Onboarding Guide</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
