--- a/index.html
+++ b/index.html
@@ -107,10 +107,13 @@
                                 <h2 class="fs-4 fw-bold">Meeting RSVP</h2>
                                 <p class="mb-0">Let us know you're attending our upcoming meeting by filling out the RSVP form.</p>
                                 <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to complete the RSVP.</p>
+                                <p class="mt-3"><strong>Reminder:</strong> Meeting RSVP must be submitted <strong>24 hours before the meeting</strong> takes place. If not, you might not be able to secure your spot.</p>
                                 <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/bxas9Btdta" target="_blank">RSVP Now</a>
                             </div>
                         </div>
                     </div>
+
+
 
 
 
