--- a/index.html
+++ b/index.html
@@ -32,11 +32,31 @@
             }
 
             .group-photo img {
-            max-width: 100%; /* Makes sure the image is responsive */
-            height: auto;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Adds a subtle shadow for depth */
-            border-radius: 8px; /* Rounds the corners slightly */
-}
+                max-width: 100%; /* Makes sure the image is responsive */
+                height: auto;
+                box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Adds a subtle shadow for depth */
+                border-radius: 8px; /* Rounds the corners slightly */
+            }
+
+            .navbar {
+                position: sticky;
+                top: 0;
+                z-index: 1000;
+            }
+            .navbar-nav .nav-item {
+                padding-left: 15px; /* Add padding to the left */
+                padding-right: 15px; /* Add padding to the right */
+                position: relative;
+            }
+            .navbar-nav .nav-item:not(:last-child)::after {
+                content: '';
+                position: absolute;
+                right: 0;
+                top: 0;
+                height: 100%;
+                width: 1px;
+                background-color: rgba(255, 255, 255, 0.5); /* Adjust color as needed */
+            }
         </style>
     </head>
     <body>
@@ -83,7 +103,6 @@
             </div>
         </section>
 
-
         <!-- Page Content-->
         <section class="pt-4">
             <div class="container px-lg-5">
@@ -95,28 +114,30 @@
                                 <h2 class="fs-4 fw-bold">Become a Member</h2>
                                 <p class="mb-0">Join our club to gain access to exclusive events, resources, and a community of like-minded peers.</p>
                                 <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to complete the membership sign-up.</p>
+                                <p class="mt-3"><strong>After Sign-Up:</strong> Upon submitting the form, you will receive a welcome email that includes:</p>
+                                <ul class="text-start mt-2">
+                                    <li>Link to join our <strong>Discord</strong> community.</li>
+                                    <li>Link to join Code Crunch on <strong>Panther Connect</strong>.</li>
+                                    <li><strong>Google Drive folder</strong> access granted weekly.</li>
+                                    <li><strong>Notion workspace</strong> access granted weekly (next Monday).</li>
+                                </ul>
                                 <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/JEbApqq0U9" target="_blank">Sign Up</a>
                             </div>
                         </div>
                     </div>
 
-                    <!-- Meeting RSVP Card (formerly Interest Form) -->
+                    <!-- Meeting RSVP Card -->
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Meeting RSVP</h2>
-                                <p class="mb-0">Let us know you're attending our upcoming meeting by filling out the RSVP form.</p>
+                                <p class="mb-0">Let us know you're attending our upcoming <strong>special in-person events</strong> like panelist discussions, HackRank sessions with software engineers, or special events featuring goodies and lunch.</p>
                                 <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to complete the RSVP.</p>
-                                <p class="mt-3"><strong>Reminder:</strong> Meeting RSVP must be submitted <strong>24 hours before the meeting</strong> takes place. If not, you might not be able to secure your spot.</p>
+                                <p class="mt-3"><strong>Reminder:</strong> Meeting RSVP must be submitted <strong>24 hours before the event</strong> takes place. If not, you might not be able to secure your spot.</p>
                                 <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/bxas9Btdta" target="_blank">RSVP Now</a>
                             </div>
                         </div>
                     </div>
-
-
-
-
-
 
                     <!-- Attendance Form Card -->
                     <div class="col-lg-6 col-xxl-4 mb-5">
@@ -135,9 +156,9 @@
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Join Our Discord</h2>
-                                <p class="mb-0">Connect with fellow members, share ideas, and stay updated on club activities.</p>
+                                <p class="mb-0">You must <strong>become a member</strong> to receive the invite link to join our Discord community.</p>
                                 <p class="mt-3"><strong>Note:</strong> FIU email authentication is required to join Discord.</p>
-                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/6AabKB4ZZv" target="_blank">Join Discord</a>
+                                <a class="btn btn-primary btn-lg mt-3" href="https://forms.office.com/r/JEbApqq0U9" target="_blank">Become a Member</a>
                             </div>
                         </div>
                     </div>
@@ -164,16 +185,13 @@
                         </div>
                     </div>
 
-
-
-
                     <!-- Google Docs Folder Card -->
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Google Docs Folder</h2>
-                                <p class="mb-0">View our shared Google Drive folder for club documents and resources.</p>
-                                <p class="mt-3"><strong>Note:</strong> Access to the Google Drive folder may require permission. If you cannot view the documents, please request access through Google or contact one of the club admins to grant you the necessary permissions.</p>
+                                <p class="mb-0">Access is only available for current members. Access to our shared Google Drive folder is granted weekly, every Monday, after you become a member.</p>
+                                <p class="mt-3"><strong>Note:</strong> If you cannot view the documents, please request access through Google or contact one of the club admins to grant you the necessary permissions.</p>
                                 <a class="btn btn-primary btn-lg mt-3" href="https://drive.google.com/drive/folders/1TszlvVIOM9glMcMINbFpELWidgagtSD1?usp=sharing" target="_blank">Open Google Drive</a>
                             </div>
                         </div>
@@ -184,20 +202,18 @@
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <h2 class="fs-4 fw-bold">Notion Workspace</h2>
-                                <p class="mb-0">Access our Notion workspace for meeting notes, project resources, and more.</p>
+                                <p class="mb-0">Access is only available for current members. Access to our Notion workspace is granted weekly, every Monday, after you become a member.</p>
                                 <p class="mt-3">Stay tuned for updates and highlights. Our Notion workspace is currently under construction.</p>
                             </div>
                         </div>
                     </div>
-                    
-                    
                 </div>
             </div>
         </section>
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Code Crunch </p></div>
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Code Crunch</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
