--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <link href="css/styles.css" rel="stylesheet" />
         <!-- Custom CSS for logo positioning and background color-->
         <style>
+
+
             .logo-container {
                 text-align: center;
                 background-color: #5072a7; /* Match the background color of the logo */
@@ -60,25 +62,40 @@
         </style>
     </head>
     <body>
-        <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container px-lg-5">
-                <a class="navbar-brand" href="index.html">
-                    <img src="assets/images/logo.png" alt="Code Crunch Logo" />
-                    Code Crunch
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="upcoming-events.html">Events</a></li>
-                        <li class="nav-item"><a class="nav-link" href="onboarding-guide.html">Onboarding Guide</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container px-lg-5">
+        <!-- Logo and Brand Name -->
+        <a class="navbar-brand" href="index.html">
+            <img src="assets/images/logo.png" alt="Code Crunch Logo" />
+            Code Crunch
+        </a>
+        <!-- Toggler for mobile view -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Navigation Links -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="upcoming-events.html">Events</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="onboarding-guide.html">Onboarding Guide</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 
         <!-- Logo section below the navbar -->
         <div class="logo-container">
